[package]
name = "awaitplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3"}
async-timer = "0.7"
async-trait = "0.1"
console = "0.15"

[lib]
name = "awaitplay"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"