[package]
name = "awaitplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3"}
async-timer = { version = "0.7", features = ["tokio_on"] }
async-trait = "0.1"
rand = "0.8"
terminal = "0.2"
tokio = { version = "0.2", features = ["full"] }

[lib]
name = "awaitplay"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"